# lorenzetti

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  a  build_lzt.sh  fix_commit.sh  requirements.txt  run.sh  run_lorenzetti.sh  run_wanomalies.sh  run_wpileup.sh  setup.sh  setup_envs.sh  setup_module.sh  start.sh
ci_tests/: tests
core/: CMakeLists.txt
core/G4Kernel/: CMakeLists.txt  Makefile
core/G4Kernel/G4Kernel/: ActionInitialization.h  Analysis.h  CaloPhiRange.h  DetectorConstruction.h  EventAction.h  EventLoop.h  EventReader.h  ParticleGun.h  PrimaryGenerator.h  PrimaryGeneratorAction.h  PrimaryGeneratorMessenger.h  RunAction.h  RunManager.h  RunReconstruction.h  SteppingAction.h  constants.h
core/G4Kernel/data/: vis.mac
core/G4Kernel/python/: CaloPhiRange.py  ComponentAccumulator.py  DetectorConstruction.py  EventReader.py  ParticleGun.py  __init__.py  utilities.py
core/G4Kernel/src/: ActionInitialization.cxx  CaloPhiRange.cxx  DetectorConstruction.cxx  EventAction.cxx  EventLoop.cxx  EventReader.cxx  LinkDef.h  ParticleGun.cxx  PrimaryGeneratorAction.cxx  PrimaryGeneratorActionMessenger.cxx  ReaderMessenger.cxx  RunAction.cxx  RunManager.cxx  RunReconstruction.cxx  SteppingAction.cxx
core/GaugiKernel/: CMakeLists.txt  Makefile
core/GaugiKernel/GaugiKernel/: AlgTool.h  Algorithm.h  Collection.h  ComponentAccumulator.h  ComponentReader.h  DataHandle.h  DataHandle.icc  DataVector.h  EDM.h  IAlgTool.h  IAlgorithm.h  IComponentReader.h  MsgStream.h  PrettyTable.h  Property.h  StatusCode.h  StoreGate.h  Test.h  Timer.h  defines.h  macros.h
core/GaugiKernel/cmake/: InstallGaugiFunctions.cmake  lzt_setup.sh
core/GaugiKernel/python/: ComponentAccumulator.py  Cpp.py  EventReader.py  EventSimulator.py  Logger.py  MultiProcessing.py  __init__.py  constants.py  enumerations.py  enumerators.py  macros.py  utils.py
core/GaugiKernel/scripts/: prun_events.py  prun_evts.py  prun_job.py  prun_jobs.py  run_job.py
core/GaugiKernel/src/: AlgTool.cxx  Algorithm.cxx  Collection.cxx  ComponentAccumulator.cxx  ComponentReader.cxx  DataHandle.cxx  DataVector.cxx  LinkDef.h  MsgStream.cxx  StatusCode.cxx  StoreGate.cxx  Test.cxx  Timer.cxx
core/GenKernel/: CMakeLists.txt
core/GenKernel/GenKernel/: Event.h  EventTape.h  IGenerator.h  helper.h
core/GenKernel/python/: EventTape.py  __init__.py
core/GenKernel/src/: EventTape.cxx  helper.cxx
core/P8Kernel/: CMakeLists.txt
core/P8Kernel/P8Kernel/: Algorithm.h  Event.h  EventGenerator.h  EventReader.h  IAlgorithm.h  ParticleFilter.h  exceptions.h
core/P8Kernel/python/: EventGenerator.py  EventReader.py  __init__.py
core/P8Kernel/scripts/: prun_events.py
core/P8Kernel/src/: Algorithm.cxx  EventGenerator.cxx  EventReader.cxx  LinkDef.h  ParticleFilter.cxx
core/Root/: AlgTool.cxx  EventContext.cxx  EventLoop.cxx  IAlgTool.cxx  LinkDef.h  RunCastor.cxx  Simulator.cxx  StoreGate.cxx
core/Root/geant/: ActionInitialization.cxx  DetectorConstruction.cxx  EventAction.cxx  PrimaryGeneratorAction.cxx  PrimaryGeneratorActionMessenger.cxx  RunAction.cxx  SteppingAction.cxx
core/Root/reader/: EventReader.cxx  HEPEvtcom.cxx  ReaderMessenger.cxx
core/core/: AlgTool.h  DataVector.h  EventContext.h  EventLoop.h  IAlgTool.h  RunCastor.h  Simulator.h  StatusCode.h  StoreGate.h  constants.h  enumeration.h  macros.h
core/core/geant/: ActionInitialization.h  DetectorConstruction.h  EventAction.hh  PrimaryGeneratorAction.h  PrimaryGeneratorMessenger.h  RunAction.h
core/core/reader/: EventReader.h
core/share/: granularity_generator.py
events/CaloCell/: CMakeLists.txt  Makefile
events/CaloCell/CaloCell/: CaloCell.h  CaloCellCollection.h  CaloCellContainer.h  CaloCellConverter.h  CaloDetDescriptor.h  CaloDetDescriptorCollection.h  CaloDetDescriptorContainer.h  CaloDetDescriptorConverter.h  RawCell.h  RawCellContainer.h  enumeration.h
events/CaloCell/Root/: CaloCell.cxx  CaloCellCollection.cxx
events/CaloCell/include/: CaloCellCollection.h
events/CaloCell/python/: CaloCellCollection.py  CaloDefs.py  __init__.py
events/CaloCell/src/: CaloCell.cxx  CaloCellConverter.cxx  CaloDetDescriptor.cxx  CaloDetDescriptorConverter.cxx  LinkDef.h  RawCell.cxx
events/CaloCluster/: CMakeLists.txt
events/CaloCluster/CaloCluster/: CaloCluster.h  CaloClusterContainer.h  CaloClusterConverter.h
events/CaloCluster/Root/: CaloCluster.cxx  CaloClusterContainer.cxx
events/CaloCluster/include/: CaloCluster.h
events/CaloCluster/python/: CaloCell.py  CaloCluster.py  __init__.py
events/CaloCluster/src/: CaloCluster.cxx  CaloClusterConverter.cxx  LinkDef.h
events/CaloHit/: CMakeLists.txt  Makefile
events/CaloHit/CaloHit/: CaloHit.h  CaloHitCollection.h  CaloHitContainer.h  CaloHitConverter.h
events/CaloHit/src/: CaloHit.cxx  CaloHitConverter.cxx  LinkDef.h
events/CaloRings/: CMakeLists.txt
events/CaloRings/CaloRings/: CaloRings.h  CaloRingsContainer.h  CaloRingsConverter.h
events/CaloRings/python/: CaloRings.py  __init__.py
events/CaloRings/src/: CaloRings.cxx  CaloRingsConverter.cxx  LinkDef.h
events/EventInfo/: CMakeLists.txt  Makefile
events/Particle/: CMakeLists.txt
events/Seed/: CMakeLists.txt
events/SpacePoint/: CMakeLists.txt
events/Truth/: CMakeLists.txt
events/TruthParticle/: CMakeLists.txt  Makefile
generator/PythiaGenerator/: CMakeLists.txt
generator/evtgen/: CMakeLists.txt
generator/filters/: CMakeLists.txt
generator/genkernel/: CMakeLists.txt
generator/guns/: CMakeLists.txt
geometry/DetectorATLASModel/: CMakeLists.txt  README.md
reader/: CMakeLists.txt
reader/Root/: EventReader.cxx  LinkDef.h  ReaderMessenger.cxx
reader/reader/: EventReader.h  EventReaderMessenger.h
reco/CaloRec/: CMakeLists.txt
reconstruction/CaloHitBuilder/: CMakeLists.txt
reconstruction/CaloNtuple/: CMakeLists.txt
reconstruction/CaloNtupleBuilder/: CMakeLists.txt
reconstruction/CaloRingerBuilder/: CMakeLists.txt
reconstruction/CaloRingsBuilder/: CMakeLists.txt
reconstruction/EventNtuple/: CMakeLists.txt
reconstruction/RootStreamBuilder/: CMakeLists.txt
(+765 files in other folders)
